--- a/app/assets/stylesheets/styles/index.scss
+++ b/app/assets/stylesheets/styles/index.scss
@@ -3,20 +3,3 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 // Add a black background color to the top navigation
-@import 'w3';
-@import 'w3_turmeric';
-
-.topnav {
-  @extend .w3-top, .w3-bar, .w3-black ;
-  overflow: hidden;
-}
-
-// Style the links inside the navigation bar
-.topnav a {
-  @extend .w3-bar-item, .w3-button, .w3-mobile ;
-}
-
-// Add padding below for the fixed top bar
-.topnav+* {
-  padding-top: 4%;
-}
